[gd_scene load_steps=7 format=3 uid="uid://cjxac1qv3ujuo"]

[ext_resource type="PackedScene" uid="uid://bjdw1o6ixgh1t" path="res://scene/enemy/enemy.tscn" id="1_ybsu1"]
[ext_resource type="Script" path="res://scene/enemy/jekkyl.gd" id="2_24oou"]
[ext_resource type="Texture2D" uid="uid://8l501jrnaqt8" path="res://icon.png" id="3_huka1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c0ogn"]
size = Vector2(64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fd3oi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_huka1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oukew"]
size = Vector2(640, 144)

[node name="Jekkyl" instance=ExtResource("1_ybsu1")]
script = ExtResource("2_24oou")
speed = 200

[node name="RigidBody2D" type="RigidBody2D" parent="." index="0"]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D" index="0"]
shape = SubResource("RectangleShape2D_c0ogn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="RigidBody2D" index="1"]
sprite_frames = SubResource("SpriteFrames_fd3oi")

[node name="Timer" type="Timer" parent="RigidBody2D" index="2"]
autostart = true

[node name="sight" type="Area2D" parent="." index="1"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sight" index="0"]
position = Vector2(0, -41)
shape = SubResource("RectangleShape2D_oukew")

[connection signal="timeout" from="RigidBody2D/Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="sight" to="." method="_on_sight_body_exited"]
